Bug fixes + status healing features
Fixed bug with removing a monster that cropped up during migration to Redux.
Added in dialogs for removing poison and wound statuses when attempting to heal
a monster.

--- a/src/components/monster-health/styles.css
+++ b/src/components/monster-health/styles.css
@@ -21,6 +21,13 @@
     height:50px;
 }
 
+.disabled, .disabled:focus {
+    color: rgba(0, 0, 0, 0.25);
+    background-color: #f5f5f5;
+    border-color: #d9d9d9;
+    cursor: not-allowed;
+}
+
 .centerInput{
     border-radius:0;
     border-right: 0;
